--- a/publications.html
+++ b/publications.html
@@ -198,8 +198,27 @@
 											<li>Iglesias, T.L., Dornburg, A., Brandley, M.C., Warren, D.L. Life in the unthinking depths: energetic constraints on encephalization in marine fishes. <i>Journal of Evolutionary Biology</i> 28: 1080—1090<b><a href="#"> PDF</a></b></li>
 											<li>Dornburg, A., Friedman, M., Near, T.J. Phylogenetic analysis of molecular and morphological data highlights uncertainty in the relationships of fossil and living species of Elopomorpha (Actinopterygii: Teleostei). <i>Molecular Phylogenetics and Evolution</i> 89:205—218<b><a href="#"> PDF</a></b></li>
 										</ul>
+											<span class="image fit"><img src="images/publicationsBanner10.jpg" height="300" alt="" /></span>
 										<h4>2014</h4>
-											<p>Under construction</p>
+										<ul>
+											 <li>Dornburg, A., Moore, J., Beaulieu, J.M., Eytan, R.I., Near, T.J. The impact of shifts in marine biodiversity hotspots on patterns of range evolution: evidence from the Holocentridae (squirrelfishes and soldierfishes). <i>Evolution</i> 69:146—161 <b><a href="#"> PDF</a></b></li>
+											<li>Near, T.J. Dornburg, A., Friedman, M. Phylogenetic relationships and timing of diversification in gonorynchiform fishes inferred using nuclear gene DNA sequences (Teleostei: Ostariophysi). <i>Molecular Phylogenetics and Evolution </i>80:297—307 <b><a href="#"> PDF</a></b></li>
+											<li>Dornburg,A., Townsend, J.P., Near, T.J. Phylogenetic informativeness approaches reconcile ray-finned fish divergence times. <i>BMC Evolutionary Biology</i> 14 (1): 169 <b><a href="#"> PDF</a></b></li>
+											<li>Price,S.A., Schmitz, L., Oufiero, C.E., Eytan, R.I., Dornburg, A., Smith, W.L., Friedman, M., Near, T.J., Wainwright, P.C. Two waves of niche-filling straddling the K-Pg boundary formed the modern reef fish fauna. <i>Proceedings of the Royal Society B</i> 281: 2014321 <b><a href="#"> PDF</a></b></li>
+											<li>Moore, J. and Dornburg, A. Ingestion of fossil seashells, stones, and small mammal bones by gravid gopher tortoises (Gopherus polyphemus) in South Florida. <i>Peabody Bulletin of Natural History</i> 55: 55—63 <b><a href="#"> PDF</a></b></li>
+										</ul>
+										<span class="image fit"><img src="images/publicationsBanner11.jpg" height="300" alt="" /></span>
+										<h4>2013</h4>
+										<ul>
+											<li>Near, T.J., Dornburg, A., Eytan, R.I., Keck, B.P., Smith, W.L., Kuhn, K.L., Moore, J.A.,Price, S.A., Burbrink, F.T., Friedman, M., Wainwright, P.M. Phylogeny and tempo of diversification in the superradiation of spiny-rayed fishes. <i>Proceedings of the National Academy Sciences </i>110: 12738—12743 <b><a href="#"> PDF</a></b></li>
+											<li>Near, T.J., Dornburg, A., Tokita, M., Suzuki, D., Brandley, M.C., Friedman, M. Boom and bust: ancient and recent diversification in bichirs and ropefish (Polypteridae: Actinopterygii), a relictual lineage of ray-finned fishes. <i>Evolution</i> 68: 1014—1026 <b><a href="#"> PDF</a></b></li>
+											<li>Friedman, M., Keck, B.P., Dornburg, A., Eytan, R.I., Martin, C.H., Hulsey, C.D., Wainwright P.C., T.J. Near. Molecular and fossil evidence place the origin of cichlid fishes long after Gondwanan rifting. <i>Proceedings of the Royal Society B</i> 280:20131733 <b><a href="#"> PDF</a></b></li>
+											<li>Reynolds,R.G., Niemiller, M.L., Hedges, S.B., Dornburg, A., Revell, L.J. Molecular phylogeny and historical biogeography of West Indian boid snakes (Chilabothrus). <i>Molecular Phylogenetics and Evolution</i> 68: 461—470 <b><a href="#"> PDF</a></b></li>
+											<li>Santini, F., Sorenson, L., Marcroft, T. Dornburg, A., Alfaro, M.E. A multilocus phylogeny of boxfishes (Aracanidae, Ostraciidae; Tetraodonti- formes).<i> Molecular Phylogenetics and Evolution</i> 66: 153—160 <b><a href="#"> PDF</a></b></li>
+										</ul>
+										<h4>2012</h4>
+										<p>Under Construction</p>
+
 
 
 
