--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 						<div class="content">
 							<header>
 								<h2>Phylogenomics</h2>
-								<p>Some text here</p>
 							</header>
-							<p> Some more text here </p>
+							<p> Reconstructing the Tree of Life gives us an evolutionary roadmap of the pathways various organisms took to the present day. This perspective is essential for topics that span a lineage's response to climate change to metastatic cascades in cancer. However, estimating phylogenies is far from trivial </p>
+							<p> Genome scale datasets provide a wealth of information, but also a lot of noise. Picture hiding a giant needle with an answer in a massive haystack. In our group we develop tools and theory to find that needle of information. This allows us to harness the power of massive sequence datasets and estimate robust phylogenies<p>
 							<ul class="actions">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
@@ -145,7 +145,7 @@
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
 									<span class="icon solid alt major fa-comment"></span>
-									<h3>Recent Papers</h3>
+									<h3>Recent papers</h3>
 									<p>Summaries of our latest papers along with links to pdfs or tutorials</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
