--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<header>
 							<h2>Macroevolution</h2>
 						</header>
-						<p> As we move into the 21st century, it is becoming apparent that learning about the past can critically aid us in facing emergent challenges to biodiversity. </p><p>Given the rapid pace of global change devloping this understanding now is fundamentally important if we want to accurately forecast how biodiversity will be impacted by factors ranging from species invasion, ocean acidification, development, and rising temperatures. </p> <p>Learn about our own work concerning the evolution of biodiversity and global change and how these relate to the findings from the research efforts of our friends and colleagues here!</p>
+						<p> As we move into the 21st century, it is becoming apparent that learning about the past can critically aid us in facing emergent challenges to biodiversity </p><p>Given the rapid pace of global change devloping this understanding now is fundamentally important if we want to accurately forecast how biodiversity will be impacted by factors ranging from species invasion, ocean acidification, development, and rising temperatures </p> <p>Learn about our own work concerning the evolution of biodiversity and global change and how these relate to the findings from the research efforts of our friends and colleagues here!</p>
 						<ul class="actions">
 							<li><a href="macro.html" class="button">Learn More</a></li>
 						</ul>
@@ -102,7 +102,7 @@
 						<header>
 							<h2>Evolutionary Medicine</h2>
 						</header>
-							<p>Evolutionary biology is often considered a historical discipline. However, leveraging the power of evolutionary biology allows us to better understand, prevent, or treat disease. Our work on the durability of the immune response to SARS-CoV-2 underscore its important role in informing decision-making, and provide a crucial stepping stone toward robust knowledge of our prospects of resistance to reinfection. </p>
+							<p>Evolutionary biology is often considered a historical discipline. However, leveraging the power of evolutionary biology allows us to better understand, prevent, or treat disease. Our work on the durability of the immune response to SARS-CoV-2 underscore its important role in informing decision-making, and provide a crucial stepping stone toward robust knowledge of our prospects of resistance to reinfection </p>
 							<p> A major initiative in the lab is to continue work that integrates knowledge of pathogen and host diversity into a phylogenetic framework to provide critical insights that can aid our efforts to thwart existing and emergent diseases </p>
 						
 						<ul class="actions">
@@ -114,7 +114,7 @@
 
 				<!-- Five -->
 					<section id="five" class="spotlight style3 left">
-						<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
+						<span class="image fit main"><img src="images/main5.jpg" alt="" /></span>
 						<div class="content">
 							<header>
 								<h2>Phylogenomics</h2>
