--- a/current.html
+++ b/current.html
@@ -54,8 +54,7 @@
 						<!-- Content -->
 							<section id="content">
 		 							<p><span class="image left">
-		 								<img src="images/Kat.jpg"
-		 								width="200" height="220" alt="" /></span>
+		 								<img src="images/Kat.jpg" alt="" /></span>
 										<b>Katerina Zapfe</b><br>
 										<i> PhD Student</i><br>
 										I'm Kat, a SCUBA diver, NSF Graduate Research Fellow, and PhD student in the Dornburg lab interested in the evolution and conservation
