fixing scaling issue

--- a/alex.html
+++ b/alex.html
@@ -24,7 +24,7 @@
 						<li><a href="research.html">Research</a>
 							<ul>
 								<li><a href="macro.html">Macroevolution</a></li>
-								<li><a href="comp.html">Computational Epidemiology</a></li>
+								<li><a href="comp.html">Evolutionary Medicine</a></li>
 								<li><a href="phylo.html">Phylogenomics</a></li>
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
@@ -57,7 +57,7 @@
 								<h3>Alex Dornburg</h3>
 								<i> Principal Investigator</i>
 								<p><span class="image right">
-									<img src="images/Alex.jpg"
+									<img src="images/people/AlexAlt.jpg"
 									width="200" height="300" alt="" /></span>
 									In my lab group, we aim to develop a better understanding of the general principles
 									that have given rise to the diversity of living vertebrates and enabled their persistence. This
