--- a/current.html
+++ b/current.html
@@ -54,7 +54,7 @@
 						<!-- Content -->
 							<section id="content">
 		 							<p><span class="image left">
-		 								<img src="images/Kat.jpg" alt="" /></span>
+		 								<img src="images/people/KatAlt.jpg" alt="" /></span>
 										<b>Katerina Zapfe</b><br>
 										<i> PhD Student</i><br>
 										I'm Kat, a SCUBA diver, NSF Graduate Research Fellow, and PhD student in the Dornburg lab interested in the evolution and conservation
@@ -67,8 +67,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/Rittika.jpg"
-										width="200" height="300" alt="" /></span>
+										<img src="images/people/RittikaAlt.jpg" alt="" /></span>
 										<b>Rittika Malik</b><br>
 										<i> PhD Student</i><br>
 										I am a fourth-year Ph.D. student in the Bioinformatics department at UNC Charlotte.  I have completed my Masters from the same
