--- a/alex.html
+++ b/alex.html
@@ -57,8 +57,7 @@
 								<h3>Alex Dornburg</h3>
 								<i> Principal Investigator</i>
 								<p><span class="image right">
-									<img src="images/people/AlexAlt.jpg"
-									width="200" height="300" alt="" /></span>
+									<img src="images/people/AlexAlt.jpg" alt="" /></span>
 									In my lab group, we aim to develop a better understanding of the general principles
 									that have given rise to the diversity of living vertebrates and enabled their persistence. This
 									knowledge not only allows us to gain a better understanding of the evolution of our own genomes,
