--- a/current.html
+++ b/current.html
@@ -145,8 +145,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/April.jpg"
-										width="200" height="250" alt="" /></span>
+										<img src="images/April.png" alt="" /></span>
 										<b>April Lamb</b><br>
 										<i>Research Technician</i><br>
 										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and
