--- a/current.html
+++ b/current.html
@@ -90,7 +90,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/Cameron.png"
+										<img src="images/people/CameronAlt.png"
 										width="200" height="250" alt="" /></span>
 										<b>Cameron Nguyen</b><br>
 										<i> Masters Student</i><br>
@@ -104,7 +104,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/Alexandra.jpg"
+										<img src="images/people/AlexandraAlt.png"
 										width="200" height="250" alt="" /></span>
 										<b>Alexandra Tew</b><br>
 										<i> Masters Student</i><br>
@@ -117,7 +117,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/Manav.jpg"
+										<img src="images/people/ManavAlt.png"
 										width="200" height="250" alt="" /></span>
 										<b>Manav Rohilla</b><br>
 										<i> Undergraduate, Sophomore</i><br>
@@ -131,7 +131,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/Ella.png"
+										<img src="images/people/EllaAlt.png"
 										width="200" height="250" alt="" /></span>
 										<b>Ella Kellner</b><br>
 										<i>Undergraduate, Freshman</i><br>
@@ -145,7 +145,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/April.png" alt="" /></span>
+										<img src="images/people/AprilAlt.png" alt="" /></span>
 										<b>April Lamb</b><br>
 										<i>Research Technician</i><br>
 										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and
