--- a/current.html
+++ b/current.html
@@ -54,7 +54,7 @@
 						<!-- Content -->
 							<section id="content">
 		 							<p><span class="image left">
-		 								<img src="images/people/KatAlt.jpg" alt="" /></span>
+		 								<img src="images/people/KatAlt.jpg" alt="Photo of Kat Zapfe" /></span>
 										<b>Katerina Zapfe</b><br>
 										<i> PhD Student</i><br>
 										I'm Kat, a SCUBA diver, NSF Graduate Research Fellow, and PhD student in the Dornburg lab interested in the evolution and conservation
@@ -67,7 +67,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/people/RittikaAlt.jpg" alt="" /></span>
+										<img src="images/people/RittikaAlt.jpg" alt="Photo of Rittika Malik" /></span>
 										<b>Rittika Malik</b><br>
 										<i> PhD Student</i><br>
 										I am a fourth-year Ph.D. student in the Bioinformatics department at UNC Charlotte.  I have completed my Masters from the same
@@ -90,8 +90,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/people/CameronAlt.png"
-										width="200" height="250" alt="" /></span>
+										<img src="images/people/CameronAlt.png" alt="Photo of Cameron Nguyen and a cat" /></span>
 										<b>Cameron Nguyen</b><br>
 										<i> Masters Student</i><br>
 										I'm Cameron Nguyen, a masters student at UNC Charlotte pursuing a graduate degree in Bioinformatics. I obtained my bachelors degree
@@ -104,8 +103,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/people/AlexandraAlt.png"
-										width="200" height="250" alt="" /></span>
+										<img src="images/people/AlexandraAlt.png" alt="Photo of Alexandra Tew" /></span>
 										<b>Alexandra Tew</b><br>
 										<i> Masters Student</i><br>
 										I'm Alexandra, a graduate student in the Department of Bioinformatics and Genomics at UNCC with a particular interest in studying
@@ -117,8 +115,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/people/ManavAlt.png"
-										width="200" height="250" alt="" /></span>
+										<img src="images/people/ManavAlt.png" alt="Photo of Manav Rohilla" /></span>
 										<b>Manav Rohilla</b><br>
 										<i> Undergraduate, Sophomore</i><br>
 										Hello! My name is Manav (it might take a couple tries to get it right)! I am a junior at UNC Charlotte and am studying Computer Science
@@ -131,8 +128,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/people/EllaAlt.png"
-										width="200" height="250" alt="" /></span>
+										<img src="images/people/EllaAlt.png" alt="Photo of Ella Kellner on a hike" /></span>
 										<b>Ella Kellner</b><br>
 										<i>Undergraduate, Freshman</i><br>
 										I'm Ella, a freshman at UNC Charlotte. I am majoring in Biology and have a great interest in environmental and evolutionary sciences.
@@ -145,7 +141,7 @@
 
 
 									<p><span class="image left">
-										<img src="images/people/AprilAlt.png" alt="" /></span>
+										<img src="images/people/AprilAlt.png" alt="Photo of April Lamb" /></span>
 										<b>April Lamb</b><br>
 										<i>Research Technician</i><br>
 										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and
