--- a/team.html
+++ b/team.html
@@ -53,24 +53,26 @@
 
 						<!-- Content -->
 							<section id="content">
+								<span class="image left">
+		 								<img src="images/people/KatAlt.jpg"
+		 								alt="" /></span>
 		 							<b>Katerina Zapfe</b><br>
-		 							<i> PhD Student</i>
-		 							<span class="image right">
-		 								<img src="images/Kat.jpg"
-		 								width="200" height="200" alt="" /></span>
+		 							<i> PhD Student</i><br>
 										I'm Kat, a SCUBA diver, NSF Graduate Research Fellow, and PhD student in the Dornburg lab interested in the evolution and conservation
 										of marine biodiversity. I ask how morphology, ecology, or presence of specific genes can influence the evolution of fishes across space
 										and time. My thesis research uses an interdisciplinary approach to explore how marine fishes respond to extreme habitat transitions at
 										inter-individual and macroevolutionary scales. Through phylogenomics, models and comparative methods, I ask how environmental changes
 										happening today can impact the fish diversity of tomorrow.<br>
 										<a href='https://www.researchgate.net/profile/Katerina_Zapfe'> Researchgate </a>
-										<br>
+										<br></br>
+										<br></br>
+										<br></br>
 
+									<span class="image left">
+										<img src="images/people/RittikaAlt.jpg"
+										alt="" /></span>
 									<b>Rittika Malik</b><br>
-									<i> PhD Student</i>
-									<span class="image right">
-										<img src="images/Rittika.jpg"
-										width="200" height="300" alt="" /></span>
+									<i> PhD Student</i><br>
 										I am a fourth-year Ph.D. student in the Bioinformatics department at UNC Charlotte.  I have completed my Masters from the same
 										department where I worked on population genetics. I am interested in evolutionary biology and studying the diversity of animals
 										all across the globe. I am currently studying the evolution of immune genes in fishes. I am interested in understanding the repertoire
@@ -82,17 +84,19 @@
 										python, R, and bash. I am familiar with libraries such as BWA, openmpi, Busco, RepdeNovo and other bioinformatics pipelines. During my
 										free time, I love swimming, photography and travelling to new places.
 										<br>
-
+										<br>
+										<br>
+										
 									<b>Haris Muharemovic</b><br>
-									<i> PhD Student</i>
+									<i> PhD Student</i><br>
 										<br>
 										<br>
-
+										<br>
+									<span class="image left">
+										<img src="images/people/CameronAlt.png"
+										alt="" /></span>
 									<b>Cameron Nguyen</b><br>
-									<i> Masters Student</i>
-									<span class="image right">
-										<img src="images/Cameron.png"
-										width="200" height="200" alt="" /></span>
+									<i> Masters Student</i><br>
 										I'm Cameron Nguyen, a masters student at UNC Charlotte pursuing a graduate degree in Bioinformatics. I obtained my bachelors degree
 										from NCSU and am now soon to graduate from UNCC. My interests have always included computers, so naturally I gravitated towards
 										the bioinformatics program at UNCC. Being of a biological science background, it felt like the perfect arrangement to combine
@@ -100,24 +104,38 @@
 										<br>
 										<br>
 										<br>
-
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										
+										<span class="image left">
+										<img src="images/people/AlexandraAlt.png"
+										alt="" /></span>
 									<b>Alexandra Tew</b><br>
-									<i> Masters Student</i>
-									<span class="image right">
-										<img src="images/Alexandra.jpg"
-										width="200" height="200" alt="" /></span>
-										I'm Alexandra, a graduate student in the Department of Bioinformatics and Genomics at UNCC with a particular interest in studying
-										the impacts of endosymbiosis on the genome of marine organisms.<br>
+									<i> Masters Student</i><br>
+										I'm Alexandra, a graduate student in thr Department of Bioinformatics and Genomics at UNCC with a particular interest in studying
+										the impacts of endosymbiosis on the genome of marine organisms. I am currently working on the evolution of gene families in nototheniod fishes, with a focus on the relationship between changes in opsin gene tuning sites and habitat. <br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
 										<br>
 										<br>
 										<br>
 										<br>
 
+										<span class="image left">
+										<img src="images/people/ManavAlt.png"
+										alt="" /></span>
 									<b>Manav Rohilla</b><br>
-									<i> Undergraduate, Sophomore</i>
-									<span class="image right">
-										<img src="images/Manav.jpg"
-										width="200" height="200" alt="" /></span>
+									<i> Undergraduate, Sophomore</i><br>
 										Hello! My name is Manav (it might take a couple tries to get it right)! I am a junior at UNC Charlotte and am studying Computer Science
 										with concentration in bioinformatics. I’ve been interested in how life on this planet has evolved with time since high school, and
 										bioinformatics is, in my opinion, one of the most interesting ways to analyze the evolutionary history that can be found within the
@@ -125,29 +143,60 @@
 										acquisition, analysis, and reorganization of genetic data associated with viruses. Outside of EvIL, I enjoy aviation, playing guitar,
 										playing video games, and drinking what some may consider to be copious amounts of coffee!
 										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
 
+										<span class="image left">
+										<img src="images/people/EllaAlt.png"
+										alt="" /></span>
 									<b>Ella Kellner</b><br>
-									<i>Undergraduate, Freshman</i>
-									<span class="image right">
-										<img src="images/Ella.png"
-										width="200" height="200" alt="" /></span>
+									<i>Undergraduate, Freshman</i><br>
 										I'm Ella, a freshman at UNC Charlotte. I am majoring in Biology and have a great interest in environmental and evolutionary sciences.
 										I aim to have a career in research and I am working to gain the research experience that I will need in the future. I am currently
 										focusing my efforts helping in the Dornburg laboratory.
 										<br>
 										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
 
+
+										<span class="image left">
+										<img src="images/people/AprilAlt.png"
+										alt="" /></span>
 									<b>April Lamb</b><br>
-									<i>Research Technician</i>
-									<span class="image right">
-										<img src="images/April.jpg"
-										width="200" height="200" alt="" /></span>
+									<i>Research Technician</i><br>
 										I'm April, a Research Technician in the Dornburg Lab. Prior to this position, I received my Masters degree in Biology, Ecology and
 										Evolution and a professional certificate in Geospatial Information Systems (GIS) from North Carolina
 										State University. I am also a 2017 National Science Foundation Graduate Research Fellow and hold a Bachelor's degree in Zoology
 										from NC State. Broadly, I am interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute
 										to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management
 										decisions. I am especially interested in systems that are experiencing high levels of anthropogenically-driven change.
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
+										<br>
 										<br>
 
 
