--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 								<li><a href="immuno.html">Immunogenetics</a></li>
 							</ul>
 						</li>
-						<li><a href="current.html">Team</a>
+						<li><a href="teamOverview.html">Team</a>
 						<ul>
 							<li><a href="alex.html">Alex Dornburg</a></li>
 							<li><a href="current.html">Current Team Members</a></li>
@@ -106,7 +106,7 @@
 							<p> A major initiative in the lab is to continue work that integrates knowledge of pathogen and host diversity into a phylogenetic framework to provide critical insights that can aid our efforts to thwart existing and emergent diseases </p>
 						
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="comp.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#five" class="goto-next scrolly">Next</a>
