more updates and links

--- a/teamOverview.html
+++ b/teamOverview.html
@@ -60,21 +60,21 @@
 								<b>Learn more about</b>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit ">Dr. Alex Dornburg</a></li>
+											<li><a href="alex.html" class="button primary fit ">Dr. Alex Dornburg</a></li>
 										</ul>
 									</div>
 								<br>
 								<b>Learn more about</b>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit ">Current Students</a></li>
+											<li><a href="current.html" class="button primary fit ">Current Students</a></li>
 										</ul>
 									</div>
 								<br>
 								<b>Learn more about</b>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
-											<li><a href="#" class="button primary fit ">Alumni</a></li>
+											<li><a href="alumni.html" class="button primary fit ">Alumni</a></li>
 										</ul>
 									</div>
 								<p></p>
