--- a/team.html
+++ b/team.html
@@ -53,6 +53,7 @@
 
 						<!-- Content -->
 							<section id="content">
+								<section id = "katerina">
 								<span class="image left">
 		 								<img src="images/people/KatAlt.jpg"
 		 								alt="" /></span>
@@ -62,12 +63,10 @@
 										of marine biodiversity. I ask how morphology, ecology, or presence of specific genes can influence the evolution of fishes across space
 										and time. My thesis research uses an interdisciplinary approach to explore how marine fishes respond to extreme habitat transitions at
 										inter-individual and macroevolutionary scales. Through phylogenomics, models and comparative methods, I ask how environmental changes
-										happening today can impact the fish diversity of tomorrow.<br>
+										happening today can impact the fish diversity of tomorrow.
 										<a href='https://www.researchgate.net/profile/Katerina_Zapfe'> Researchgate </a>
-										<br></br>
-										<br></br>
-										<br></br>
-
+								</section>
+								<section id="rittika">
 									<span class="image left">
 										<img src="images/people/RittikaAlt.jpg"
 										alt="" /></span>
@@ -83,15 +82,12 @@
 										of Polypterus bichir and Long nosed gar. My skills involve developing pipelines for immunogenetics research by using a combination of
 										python, R, and bash. I am familiar with libraries such as BWA, openmpi, Busco, RepdeNovo and other bioinformatics pipelines. During my
 										free time, I love swimming, photography and travelling to new places.
-										<br>
-										<br>
-										<br>
-										
+								</section>
+								<section>	
 									<b>Haris Muharemovic</b><br>
 									<i> PhD Student</i><br>
-										<br>
-										<br>
-										<br>
+								</section>
+								<section>
 									<span class="image left">
 										<img src="images/people/CameronAlt.png"
 										alt="" /></span>
@@ -100,16 +96,9 @@
 										I'm Cameron Nguyen, a masters student at UNC Charlotte pursuing a graduate degree in Bioinformatics. I obtained my bachelors degree
 										from NCSU and am now soon to graduate from UNCC. My interests have always included computers, so naturally I gravitated towards
 										the bioinformatics program at UNCC. Being of a biological science background, it felt like the perfect arrangement to combine
-										the two. My current research involves an investigation regarding the evolution of innate immune system genes.<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
+										the two. My current research involves an investigation regarding the evolution of innate immune system genes.
+								</section>
+								<section>
 										
 										<span class="image left">
 										<img src="images/people/AlexandraAlt.png"
@@ -117,20 +106,9 @@
 									<b>Alexandra Tew</b><br>
 									<i> Masters Student</i><br>
 										I'm Alexandra, a graduate student in thr Department of Bioinformatics and Genomics at UNCC with a particular interest in studying
-										the impacts of endosymbiosis on the genome of marine organisms. I am currently working on the evolution of gene families in nototheniod fishes, with a focus on the relationship between changes in opsin gene tuning sites and habitat. <br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-
+										the impacts of endosymbiosis on the genome of marine organisms. I am currently working on the evolution of gene families in nototheniod fishes, with a focus on the relationship between changes in opsin gene tuning sites and habitat.
+								</section>
+								<section>
 										<span class="image left">
 										<img src="images/people/ManavAlt.png"
 										alt="" /></span>
@@ -142,16 +120,8 @@
 										biosphere we inhabit. The work I do in the Evolutionary Informatics Lab (conveniently shortened to EvIL) revolves mostly around the
 										acquisition, analysis, and reorganization of genetic data associated with viruses. Outside of EvIL, I enjoy aviation, playing guitar,
 										playing video games, and drinking what some may consider to be copious amounts of coffee!
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
+								</section>
+								<section>
 
 										<span class="image left">
 										<img src="images/people/EllaAlt.png"
@@ -161,19 +131,8 @@
 										I'm Ella, a freshman at UNC Charlotte. I am majoring in Biology and have a great interest in environmental and evolutionary sciences.
 										I aim to have a career in research and I am working to gain the research experience that I will need in the future. I am currently
 										focusing my efforts helping in the Dornburg laboratory.
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-
-
+								</section>
+								<section>
 										<span class="image left">
 										<img src="images/people/AprilAlt.png"
 										alt="" /></span>
@@ -185,19 +144,7 @@
 										from NC State. Broadly, I am interested in better understanding the bases of ecosystem resiliency (i.e. what factors contribute
 										to an ecosystem's ability to recover from perturbations) and applying this knowledge to inform science-based policy and management
 										decisions. I am especially interested in systems that are experiencing high levels of anthropogenically-driven change.
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
-										<br>
+								</section>
 
 
 
